fixed gdots color bug

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -21,7 +21,10 @@ window.open('','_parent','');
 window.close();
 }
 
-console.log('START OF GLOWCOMM')
+
+
+
+console.log('START OF GLOWCOMM HTML')
 
 function fontloading() {
     "use strict";
